[gd_scene load_steps=4 format=3 uid="uid://duspee7clocox"]

[ext_resource type="FontFile" uid="uid://hcgkw0yo27p1" path="res://virust/VIRUST.ttf" id="1_lcejy"]
[ext_resource type="Texture2D" uid="uid://1fx4yw2hryf" path="res://Backgrounds/BACKGROUND! (1).png" id="1_svni1"]
[ext_resource type="Script" path="res://MainMenu.gd" id="1_vaymg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vaymg")

[node name="Background!(1)" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(958, 550)
scale = Vector2(0.502083, 0.510185)
texture = ExtResource("1_svni1")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -119.0
offset_top = 16.0
offset_right = 2031.0
offset_bottom = 209.0
theme_override_colors/font_color = Color(0.698039, 0.505882, 0.168627, 1)
theme_override_fonts/font = ExtResource("1_lcejy")
theme_override_font_sizes/font_size = 150
text = "TRAILBLAZER`S TRIVIA"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 349.0
offset_right = 1398.0
offset_bottom = 455.0
theme_override_fonts/font = ExtResource("1_lcejy")
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "START NEW GAME"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button2" type="Button" parent="."]
offset_left = 506.0
offset_top = 521.0
offset_right = 1400.0
offset_bottom = 627.0
theme_override_fonts/font = ExtResource("1_lcejy")
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "HOW TO PLAY"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button3" type="Button" parent="."]
offset_left = 507.0
offset_top = 695.0
offset_right = 1401.0
offset_bottom = 801.0
theme_override_fonts/font = ExtResource("1_lcejy")
theme_override_font_sizes/font_size = 50
toggle_mode = true
text = "EXIT"
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
